syntax = "proto2";
package tutorial;

/* import "google/protobuf/timestamp.proto"; */

message Person {
  required string name = 1;
  required int32 id = 2;  // Unique ID number for this person.
  optional string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    required string number = 1;
    optional PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  /* google.protobuf.Timestamp last_updated = 5; */
}

// Our address book file is just one of these.
message AddressBook {
  repeated Person people = 1;
}
